--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,16 +1,21 @@
-name: ci
+name: cicd
 
 on:
   push:
     paths:
-        - src/**
+      - src/**
     branches:
-        - main
+      - main
 
 jobs:
-  docker:
+  ci:
     runs-on: ubuntu-latest
     steps:
+
+      - name: Shorten commit id
+        shell: bash
+        run: |
+          echo "COMMIT_ID=${GITHUB_SHA::6}" >> "$GITHUB_ENV"
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -18,14 +23,11 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      -
         name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: arunimsharma/arunimtesting:${GITHUB_SHA::6}
+          tags: arunimsharma/arunimtesting:${{ env.COMMIT_ID }}
+
+    outputs:
+      commit_id: ${{ env.COMMIT_ID }}
